--- a/src/app/forward-message/forward-dialog.html
+++ b/src/app/forward-message/forward-dialog.html
@@ -1,63 +1,69 @@
-<div mat-dialog-content style="width: 800px; height: 700px;" *ngIf="user">
+<div mat-dialog-content style="width: 800px; height: 700px !important;position: relative;" *ngIf="user">
   <!--User-->
   <div class="container" id="forward">
-    <div class="row" style="border-bottom: 1px solid;">
+    <button class="btn btn-secondary clear" (click)="dialogRef.close()">
+      <mat-icon>clear</mat-icon>
+    </button>
+    <div class="row" style="border-bottom: 1px solid;margin-top: 10px;">
       <p style="margin-right: 10px;">Campaign Name:</p>
-      <div>{{temp.campaign}}</div>
+      <div>{{forwardData[0].campaign_name}}</div>
     </div>
     <br />
     <div class="row">
       <p>Message Content</p>
+    </div>
+    <div class="row">
       <div
         id="message"
         style="
           border: 2px solid #1d8b4e;
           padding: 7px;
           margin-bottom: 15px;
+          width: 100%;
           height: 70px;
           overflow: auto;
         "
       >
-        {{temp.message}}
+        {{forwardData[0].message}}
       </div>
     </div>
     <div class="row gap">
       <p>Sent From:</p>
-      <p>{{temp.sentFrom}}</p>
+      <p>{{forwardData[0].org_name}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Contact:</p>
-      <p>{{temp.contact}}</p>
+      <p>{{forwardData[0].name}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Contact No:</p>
-      <p>{{temp.contactNo}}</p>
+      <p>{{forwardData[0].mobile}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Recieved Date:</p>
-      <p>{{temp.receivedDate}}</p>
+      <p>{{forwardData[0].received_date}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Target States:</p>
-      <p>{{temp.states}}</p>
+      <p>{{forwardData[0].states}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>SMS to send:</p>
-      <p>{{temp.sms}}</p>
+      <p>{{forwardData[0].sms_cnt}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Whatsapp to send:</p>
-      <p>{{temp.whatsapp}}</p>
+      <p>{{forwardData[0].wa_cnt}}</p>
       <br />
     </div>
     <div class="row" style="float: right;">
-      <button class="btn btn-danger" (click)="dialogRef.close()">Cancel</button>
+      <button class="btn btn-danger" (click)="deleting()">Delete</button>
       <button class="btn btn-success" (click)="forward()">Forward</button>
     </div>
   </div>
@@ -72,7 +78,7 @@
   *ngIf="admin"
 >
   <!--Admin-->
-  <div class="container" id="forward" *ngIf="admin">
+  <div class="container" id="forward">
     <button class="btn btn-secondary clear" (click)="dialogRef.close()">
       <mat-icon>clear</mat-icon>
     </button>
@@ -82,7 +88,7 @@
       style="border-bottom: 1px solid #1d8b4e; margin-top: 10px;"
     >
       <p style="margin-right: 10px;">Campaign Name:</p>
-      <div>{{temp.campaign}}</div>
+      <div>{{forwardData[0].campaign_name}}</div>
     </div>
     <br />
     <div class="row">
@@ -97,27 +103,27 @@
           overflow: auto;
         "
       >
-        {{temp.message}}
+        {{forwardData[0].message}}
       </div>
     </div>
     <div class="row gap">
       <p>Sent From:</p>
-      <p>{{temp.sentFrom}}</p>
+      <p>{{forwardData[0].sentFrom}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Contact:</p>
-      <p>{{temp.contact}}</p>
+      <p>{{forwardData[0].contact}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Contact No:</p>
-      <p>{{temp.contactNo}}</p>
+      <p>{{forwardData[0].contactNo}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Sent Date:</p>
-      <p>{{temp.receivedDate}}</p>
+      <p>{{forwardData[0].receivedDate}}</p>
       <br />
     </div>
     <div
@@ -125,22 +131,22 @@
       style="border-bottom: 1px solid #1d8b4e; margin-bottom: 10px;"
     >
       <p>Target States:</p>
-      <p>{{temp.states}}</p>
+      <p>{{forwardData[0].states}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Forwarded From:</p>
-      <p>{{temp.sentTo}}</p>
+      <p>{{forwardData[0].sentTo}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Contact:</p>
-      <p>{{temp.Fcontact}}</p>
+      <p>{{forwardData[0].Fcontact}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Contact No:</p>
-      <p>{{temp.FcontactNo}}</p>
+      <p>{{forwardData[0].FcontactNo}}</p>
       <br />
     </div>
     <div
@@ -148,17 +154,17 @@
       style="border-bottom: 1px solid #1d8b4e; margin-bottom: 10px;"
     >
       <p>Forwarded Date:</p>
-      <p>{{temp.forwardedDate}}</p>
+      <p>{{forwardData[0].forwardedDate}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>SMS msgs:</p>
-      <p>{{temp.sms}}</p>
+      <p>{{forwardData[0].sms_cnt}}</p>
       <br />
     </div>
     <div class="row gap">
       <p>Whatsapp msgs:</p>
-      <p>{{temp.whatsapp}}</p>
+      <p>{{forwardData[0].wa_cnt}}</p>
       <br />
     </div>
     <div class="row" style="float: right;">
