--- a/src/app/send-message/add-organization-dialog.html
+++ b/src/app/send-message/add-organization-dialog.html
@@ -7,7 +7,7 @@
                 <div class="col-md-12">
                     <mat-form-field style="padding: 0% 6%;">
                         <mat-label>Organization</mat-label>
-                        <mat-select [(ngModel)]="selectedOrgType" formControlName="name"  required>
+                        <mat-select [(ngModel)]="selectedOrgType" (selectionChange)="orgChange($event)" formControlName="name"  required>
                           <mat-option *ngFor="let item of name" [value]="item.org_id" >
                             {{item.org_name}}
                           </mat-option>
@@ -20,9 +20,9 @@
                 <div class="col-md-12">
                     <mat-form-field style="padding: 0% 6%;">
                         <mat-label>States</mat-label>
-                        <mat-select [(ngModel)]="selectedStates" formControlName="states"  multiple required>
+                        <mat-select [(ngModel)]="selectedStates" (selectionChange)="stateChange($event)" formControlName="states"  multiple required>
                                 
-                                    <mat-option *ngFor="let item of stateList" [value]="item.state_id">
+                                    <mat-option *ngFor="let item of count" [value]="item.state_id">
                                         {{item.state_name}}
                                     </mat-option>
                                 
@@ -35,11 +35,7 @@
                 <div class="col-md-12">
                     
                         <mat-checkbox color="primary" formControlName="sms" [(ngModel)]="sms" style="padding: 0% 6%;">SMS:
-                            <div *ngFor="let item of states" style="display: inline-block;">
-                            <div *ngIf="selectedOrgType == item.id">
-                                {{item.sms}} users
-                            </div>
-                        </div>
+                            {{countSms}} users
                     </mat-checkbox>    
                     
                 </div>
@@ -48,11 +44,7 @@
                 <div class="col-md-12">
                     
                         <mat-checkbox color="primary" formControlName="whatsapp" [(ngModel)]="whatsapp" style="padding: 0% 6%;">Whatsapp: 
-                            <div *ngFor="let item of states" style="display: inline-block;">
-                                <div *ngIf="selectedOrgType == item.id"> 
-                                    {{item.whatsapp}} users
-                                </div>
-                            </div>
+                            {{countWhatsapp}} users
                         </mat-checkbox>
                         
                     
