icon/admin_flow/sent_message_user

--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -63,3 +63,9 @@ a{
 .sidebar-wrapper,.side{
   background-color: #1d8b4e;
 }
+
+.logo-img img {
+  width: 89px;
+  margin-left: 25%;
+  position: relative;
+}
