--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo side">
-    <a href="/#/send-message" class="simple-text" style="margin:-20px 0px 0px 50px;">
+    <a href="/#/send-message" class="simple-text" style="margin:-10px 0px 0px 50px;">
         <div class="logo-img" >
-            <img src="/assets/img/8-512.png" />
+            <img src="../../../assets/icons/jkf-icon.png"/>
         </div>
     </a>
 </div>
