--- a/src/app/portal-users/portal-users.component.html
+++ b/src/app/portal-users/portal-users.component.html
@@ -67,7 +67,7 @@
                                 Active
                             </div> 
                             <div *ngIf="row.st == 'V'">
-                                Verification
+                                To Be Verified
                             </div>
                         </mat-cell>
                         </ng-container>
