--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -2,7 +2,7 @@
   <div class="row" style="margin: -62px;">
     <div class="col-md-4 offset-md-4">
       <div class="logo">
-        <img src="/assets/img/8-512.png" style="justify-content: center;overflow:hidden;width:24%;margin: 0% 8% 0% 15%;"/>
+        <img src="../../assets/icons/jkf-icon.png" style="justify-content: center;overflow:hidden;width:22%;margin: 0% 8% 0% 15%;"/>
         <div class="vl">
         </div>
         <h5 style="position:absolute; overflow:hidden; width: 100%; margin:-16% 44.5%;font-weight: 400;">An Online</h5>
@@ -67,7 +67,7 @@
       <ul>
         <li>
           <a href="http://appbee.in/" target="_blank">
-            @Copyright 2020 AppBee India Pvt.Ltd. All rights reserved.
+            @Copyright 2020 JantaKaFaisla. All rights reserved.
           </a>
         </li>
       </ul>
