--- a/src/app/forward-message/forward-confirm.html
+++ b/src/app/forward-message/forward-confirm.html
@@ -28,7 +28,7 @@
     <div class="row">
 
         <div class="col-md-12">
-            <button type="button" class="btn btn-default bg-success pull-right m-3" *ngIf="action == 'Forward'" (click)="forwardMessage()">Confirm</button>       
+            <button type="button" class="btn btn-default bg-success pull-right m-3" *ngIf="action == 'Forward' || action == 'Send'" (click)="forwardMessage()">Confirm</button> 
             <button type="button" class="btn btn-default bg-success pull-right m-3" *ngIf="action == 'Delete'" (click)="deleteForward()">Confirm</button>       
             <button type="button" class="btn btn-default bg-danger pull-right m-3" mat-dialog-close>Cancel</button>   
         </div>
