--- a/src/app/send-message/send-message.component.css
+++ b/src/app/send-message/send-message.component.css
@@ -29,7 +29,7 @@
     }
 
     .mat-table {
-      overflow: auto;
+      /* overflow: auto; */
       font-family: 'Montserrat', sans-serif;
     }
 
@@ -55,7 +55,7 @@
     border-radius: 2.5rem !important;
     padding: 13px;
   }
-  .card{
+  .place{
       margin: 5px 30px -20px 20px;
       max-width: 970px;
   }
