--- a/src/app/send-message/send-message.component.html
+++ b/src/app/send-message/send-message.component.html
@@ -31,7 +31,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-10">
-                <div class="card">
+                <div class="card place">
                     <div class="card-header card-header-primary">
                         <div class="row">
                             <div class="col-lg-12 col-md-6 ">
@@ -60,7 +60,7 @@
                         <!-- Email Column -->
                         <ng-container matColumnDef="states">
                             <mat-header-cell *matHeaderCellDef style="justify-content: center;"> Selected States </mat-header-cell>
-                            <mat-cell *matCellDef="let element"> {{element.states}} </mat-cell>
+                            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.states}} </mat-cell>
                         </ng-container>
 
                         <!-- Mobile number Column -->
