--- a/src/app/sent-report/sent-report.component.html
+++ b/src/app/sent-report/sent-report.component.html
@@ -1,1 +1,256 @@
-<p>sent-report works!</p>
+<div *ngIf="user">
+<mat-tab-group mat-align-tabs="center" (selectedTabChange)="tabChange($event)">
+  <mat-tab label="Waiting at Organization" style="height: 100%;">
+    <div class="container-fluid" style="margin-top: 40px;">
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          <div class="card">
+            <div class="card-header card-header-primary">
+              <div class="row">
+                <div class="col-lg-12 col-md-6">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h4 class="card-title">Waiting at Organization</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!--User-->
+            <mat-table #table [dataSource]="dataSource" class="shadow-lg">
+              <!-- Name Column -->
+              <ng-container matColumnDef="position">
+                <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                  {{ element.position }}
+                </mat-cell>
+              </ng-container>
+
+              <!-- Name Column -->
+              <ng-container matColumnDef="campaign">
+                <mat-header-cell *matHeaderCellDef>
+                  Campaign Name
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                  {{ element.campaign_name }}
+                </mat-cell>
+              </ng-container>
+
+              <!-- Email Column -->
+              <ng-container matColumnDef="sentTo">
+                <mat-header-cell *matHeaderCellDef>
+                  Sent To Org
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                  {{ element.org_name }}
+                </mat-cell>
+              </ng-container>
+
+              <!-- Mobile number Column -->
+              <ng-container matColumnDef="sentDate">
+                <mat-header-cell *matHeaderCellDef> Sent Date </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                  {{ element.received_date }}
+                </mat-cell>
+              </ng-container>
+
+              <!-- Action Column -->
+              <ng-container matColumnDef="action">
+                <mat-header-cell *matHeaderCellDef>Action </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                  <button class="btn btn-info open" (click)="openSent(element)">
+                    Open
+                  </button>
+                  </mat-cell>
+              </ng-container>
+
+              <mat-header-row
+                *matHeaderRowDef="displayedColumns"
+              ></mat-header-row>
+              <mat-row
+                *matRowDef="let row; columns: displayedColumns;"
+              ></mat-row>
+            </mat-table>
+            <mat-paginator
+            #pag1
+              [length]="100"
+              [pageSize]="8"
+              [pageSizeOptions]="[8, 16, 32, 100]"
+              showFirstLastButtons
+            ></mat-paginator>
+          </div>
+        </div>
+      </div>
+    </div>
+  </mat-tab>
+  <mat-tab label="Waiting at Admin" style="height: 100%;">
+    <div class="container-fluid" style="margin-top: 40px;">
+        <div class="row justify-content-center">
+          <div class="col-md-10">
+            <div class="card">
+              <div class="card-header card-header-primary">
+                <div class="row">
+                  <div class="col-lg-12 col-md-6">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <h4 class="card-title">Waiting at Admin</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <!--User-->
+              <mat-table #table [dataSource]="dataSource" class="shadow-lg">
+                <!-- Name Column -->
+                <ng-container matColumnDef="position">
+                  <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.position }}
+                  </mat-cell>
+                </ng-container>
+  
+                <!-- Name Column -->
+                <ng-container matColumnDef="campaign">
+                  <mat-header-cell *matHeaderCellDef>
+                    Campaign Name
+                  </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.campaign_name }}
+                  </mat-cell>
+                </ng-container>
+  
+                <!-- Email Column -->
+                <ng-container matColumnDef="sentTo">
+                  <mat-header-cell *matHeaderCellDef>
+                    Sent To Org
+                  </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.org_name }}
+                  </mat-cell>
+                </ng-container>
+  
+                <!-- Mobile number Column -->
+                <ng-container matColumnDef="sentDate">
+                  <mat-header-cell *matHeaderCellDef> Sent Date </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.received_date }}
+                  </mat-cell>
+                </ng-container>
+  
+                <!-- Action Column -->
+                <ng-container matColumnDef="action">
+                  <mat-header-cell *matHeaderCellDef>Action </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    <button class="btn btn-info open" (click)="openSent(element)">
+                      Open
+                    </button>
+                    </mat-cell>
+                </ng-container>
+  
+                <mat-header-row
+                  *matHeaderRowDef="displayedColumns"
+                ></mat-header-row>
+                <mat-row
+                  *matRowDef="let row; columns: displayedColumns;"
+                ></mat-row>
+              </mat-table>
+              <mat-paginator
+              #pag2
+                [length]="100"
+                [pageSize]="8"
+                [pageSizeOptions]="[8, 16, 32, 100]"
+                showFirstLastButtons
+              ></mat-paginator>
+            </div>
+          </div>
+        </div>
+      </div>
+  </mat-tab>
+  <mat-tab label="Sent Successfully" style="height: 100%;">
+    <div class="container-fluid" style="margin-top: 40px;">
+        <div class="row justify-content-center">
+          <div class="col-md-10">
+            <div class="card">
+              <div class="card-header card-header-primary">
+                <div class="row">
+                  <div class="col-lg-12 col-md-6">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <h4 class="card-title">Sent Successfully</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <!--User-->
+              <mat-table #table [dataSource]="dataSource" class="shadow-lg">
+                <!-- Name Column -->
+                <ng-container matColumnDef="position">
+                  <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.position }}
+                  </mat-cell>
+                </ng-container>
+  
+                <!-- Name Column -->
+                <ng-container matColumnDef="campaign">
+                  <mat-header-cell *matHeaderCellDef>
+                    Campaign Name
+                  </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.campaign_name }}
+                  </mat-cell>
+                </ng-container>
+  
+                <!-- Email Column -->
+                <ng-container matColumnDef="sentTo">
+                  <mat-header-cell *matHeaderCellDef>
+                    Sent To Org
+                  </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.org_name }}
+                  </mat-cell>
+                </ng-container>
+  
+                <!-- Mobile number Column -->
+                <ng-container matColumnDef="sentDate">
+                  <mat-header-cell *matHeaderCellDef> Sent Date </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.received_date }}
+                  </mat-cell>
+                </ng-container>
+  
+                <!-- Action Column -->
+                <ng-container matColumnDef="action">
+                  <mat-header-cell *matHeaderCellDef>Action </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    <button class="btn btn-info open" (click)="openSent(element)">
+                      Open
+                    </button>
+                    </mat-cell>
+                </ng-container>
+  
+                <mat-header-row
+                  *matHeaderRowDef="displayedColumns"
+                ></mat-header-row>
+                <mat-row
+                  *matRowDef="let row; columns: displayedColumns;"
+                ></mat-row>
+              </mat-table>
+              <mat-paginator
+              #pag3
+                [length]="100"
+                [pageSize]="8"
+                [pageSizeOptions]="[8, 16, 32, 100]"
+                showFirstLastButtons
+              ></mat-paginator>
+            </div>
+          </div>
+        </div>
+      </div>
+  </mat-tab>
+</mat-tab-group>
+</div>
