--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,9 @@
     <div class="container-fluid">
         <div class="navbar-wrapper">
           <a class="navbar-brand" href="javascript:void(0)" style="font-size:16px ;font-weight:300;">{{getTitle()}}</a>
+          <a class="nav-link" (click)="openPopUp(filterForm.value, true)" style="position: absolute;right: 40px;">
+            <i class="material-icons">power_settings_new</i>
+        </a>
           <!-- <div style="margin: 10px 0px 0px 100px;font-weight:300; display: inline-flex;">
             <p>Balance Credits:&nbsp;</p>
             <p>WhatsApp : 23000,&nbsp; SMS : 50000</p>
@@ -25,28 +28,12 @@
                 </div> 
             </form>-->
             <ul class="navbar-nav">
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">
-                        <!-- <i class="material-icons">dashboard</i> -->
-                        <p>
-                            <span class="d-lg-none d-md-block">Stats</span>
-                        </p>
-                    </a>
-                </li>
+             
                 <ul class="navbar-nav">
-                    <li class="nav-item" style="font-size: 16px; font-size: 300;">{{getWelComeMessage()}}
+                    <li class="nav-item" style="font-size: 16px; font-size: 300;margin-right: 80px;">{{getWelComeMessage()}}
                         
                     </li>
                 </ul>
-                <li class="nav-item">
-                    <a class="nav-link" (click)="openPopUp(filterForm.value, true)">
-                        <i class="material-icons">power_settings_new</i>
-                        <p>
-                            <span class="d-lg-none d-md-block">Account</span>
-                        </p>
-                    </a>
-                </li>
             </ul>
         </div>
     </div>
