--- a/src/app/sent-report/sent-open-dialog.html
+++ b/src/app/sent-report/sent-open-dialog.html
@@ -67,3 +67,61 @@
       </div>
     </div>
   </div>
+
+  <div mat-dialog-content style="width: 700px; height: 500px !important;position: relative;" *ngIf="admin">
+    <!--User-->
+    <div class="container" id="forward">
+      <button class="btn btn-secondary clear" (click)="dialogRef.close()">
+        <mat-icon>clear</mat-icon>
+      </button>
+      <div class="row" style="border-bottom: 1px solid;margin-top: 10px;">
+        <p style="margin-right: 10px;">Campaign Name:</p>
+        <div>{{forwardData[0].campaign_name}}</div>
+      </div>
+      <br />
+      <div class="row">
+        <p>Message Content</p>
+      </div>
+      <div class="row">
+        <div
+          id="message"
+          style="
+            border: 2px solid #1d8b4e;
+            padding: 7px;
+            margin-bottom: 15px;
+            width: 100%;
+            height: 70px;
+            overflow: auto;
+          "
+        >
+          {{forwardData[0].message}}
+        </div>
+      </div>
+      <div class="row gap">
+        <p>Sent Date:</p>
+        <p>{{forwardData[0].sent_date}}</p>
+        <br />
+      </div>
+      <div class="row gap">
+        <p>Sent To:</p>
+        <p>{{forwardData[0].fwd_org}}</p>
+        <br />
+      </div>
+      <div class="row gap">
+        <p>Target States:</p>
+        <p>{{forwardData[0].states}}</p>
+        <br />
+      </div>
+      
+      <div class="row gap">
+        <p>SMS msgs:</p>
+        <p>{{forwardData[0].sms_cnt}}</p>
+        <br />
+      </div>
+      <div class="row gap">
+        <p>Whatsapp msgs:</p>
+        <p>{{forwardData[0].wa_cnt}}</p>
+        <br />
+      </div>
+    </div>
+  </div>
