--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,11 +5,6 @@
           <a class="nav-link" (click)="openPopUp(filterForm.value, true)" style="position: absolute;right: 40px;">
             <i class="material-icons">power_settings_new</i>
         </a>
-          <!-- <div style="margin: 10px 0px 0px 100px;font-weight:300; display: inline-flex;">
-            <p>Balance Credits:&nbsp;</p>
-            <p>WhatsApp : 23000,&nbsp; SMS : 50000</p>
-            </div> -->
-            
         </div>
         <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
             <span class="sr-only">Toggle navigation</span>
@@ -30,12 +25,15 @@
             <ul class="navbar-nav">
              
                 <ul class="navbar-nav">
-                    <li class="nav-item" style="font-size: 16px; font-size: 300;margin-right: 80px;">{{getWelComeMessage()}}
+                    <li class="nav-item det" (click)="userDetails()" style="font-size: 16px; font-size: 300;margin-right: 80px;">{{getWelComeMessage()}}
                         
                     </li>
                 </ul>
             </ul>
         </div>
+    </div>
+    <div *ngIf="userDet">
+        <app-user-details (userStat)="detailsClose($event)"></app-user-details>
     </div>
 </nav>
 
