--- a/src/app/forward-message/forward-dialog.html
+++ b/src/app/forward-message/forward-dialog.html
@@ -57,11 +57,11 @@
       <p>{{forwardData[0].sms_cnt}}</p>
       <br />
     </div>
-    <div class="row gap">
+    <!-- <div class="row gap">
       <p>Whatsapp to send:</p>
       <p>{{forwardData[0].wa_cnt}}</p>
       <br />
-    </div>
+    </div> -->
     <div class="row" style="float: right;">
       <button class="btn btn-danger" (click)="deleting()">Delete</button>
       <button class="btn btn-success" (click)="forward()">Forward</button>
@@ -163,11 +163,11 @@
       <p>{{forwardData[0].sms_cnt}}</p>
       <br />
     </div>
-    <div class="row gap">
+    <!-- <div class="row gap">
       <p>Whatsapp msgs:</p>
       <p>{{forwardData[0].wa_cnt}}</p>
       <br />
-    </div>
+    </div> -->
     <div class="row" style="float: right;">
       <button class="btn btn-danger" (click)="deleting()">Delete</button>
       <button class="btn btn-success" (click)="send()">Send</button>
