--- a/src/app/send-message/sending-dialog.html
+++ b/src/app/send-message/sending-dialog.html
@@ -6,7 +6,7 @@
     </div>
     <div *ngIf="!sending">
   <div class="h3">Sending Messages</div>
-  <div class="h4">Please wait....</div>
+  <div class="h5">Please do not close the window or Refresh until all the messages are sent....</div>
   </div>
   
 </div>
