--- a/src/app/excel-report/excel-report.component.html
+++ b/src/app/excel-report/excel-report.component.html
@@ -1,1 +1,86 @@
-<p>excel-report works!</p>
+<div class="container-fluid" style="margin-top: 80px;">
+    <div class="row justify-content-center">
+      <div class="col-md-10">
+        <div class="card">
+          <div class="card-header card-header-primary">
+            <div class="row">
+              <div class="col-lg-12 col-md-6">
+                <div class="row">
+                  <div class="col-md-6">
+                    <h4 class="card-title">Excel Upload Report</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!--User-->
+          <mat-table #table [dataSource]="dataSource" class="shadow-lg">
+            <!-- Name Column -->
+            <ng-container matColumnDef="position">
+              <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+              <mat-cell *matCellDef="let element; let i = index;">
+                {{ i+1 }}
+              </mat-cell>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="org">
+              <mat-header-cell *matHeaderCellDef>
+                Organization
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element">
+                {{ element.org_name }}
+              </mat-cell>
+            </ng-container>
+
+            <!-- Email Column -->
+            <ng-container matColumnDef="name">
+              <mat-header-cell *matHeaderCellDef>
+                User
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element">
+                {{ element.name }}
+              </mat-cell>
+            </ng-container>
+
+            <!-- Mobile number Column -->
+            <ng-container matColumnDef="file">
+              <mat-header-cell *matHeaderCellDef> File Name </mat-header-cell>
+              <mat-cell *matCellDef="let element">
+                {{ element.filename }}
+              </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+                <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                  {{ element.date }}
+                </mat-cell>
+              </ng-container>
+
+            <ng-container matColumnDef="records">
+              <mat-header-cell *matHeaderCellDef> No. of records </mat-header-cell>
+              <mat-cell *matCellDef="let element">
+                {{ element.no_of_records }}
+              </mat-cell>
+            </ng-container>
+
+
+            <mat-header-row
+              *matHeaderRowDef="displayedColumns"
+            ></mat-header-row>
+            <mat-row
+              *matRowDef="let row; columns: displayedColumns;"
+            ></mat-row>
+          </mat-table>
+          <mat-paginator
+            [length]="100"
+            [pageSize]="8"
+            [pageSizeOptions]="[8, 16, 32, 100]"
+            showFirstLastButtons
+          ></mat-paginator>
+        </div>
+      </div>
+    </div>
+  </div>
