--- a/src/app/forwarded-report/forward-open-dialog.html
+++ b/src/app/forwarded-report/forward-open-dialog.html
@@ -58,11 +58,11 @@
         <p>{{forwardData[0].sms_cnt}}</p>
         <br />
       </div>
-      <div class="row gap">
+      <!-- <div class="row gap">
         <p>Whatsapp to send:</p>
         <p>{{forwardData[0].wa_cnt}}</p>
         <br />
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -152,11 +152,11 @@
           <p>{{forwardData[0].sms_cnt}}</p>
           <br />
         </div>
-        <div class="row gap">
+        <!-- <div class="row gap">
           <p>Whatsapp msgs:</p>
           <p>{{forwardData[0].wa_cnt}}</p>
           <br />
-        </div>
+        </div> -->
         <div class="row gap">
             <p>Approved Date:</p>
             <p>{{forwardData[0].approved_date}}</p>
