--- a/src/app/forwarded-report/forwarded-report.component.html
+++ b/src/app/forwarded-report/forwarded-report.component.html
@@ -246,6 +246,14 @@
                           {{ element.to_org }}
                         </mat-cell>
                       </ng-container>
+
+                      <ng-container matColumnDef="sms">
+                        <mat-header-cell *matHeaderCellDef> Sms sent </mat-header-cell>
+                        <mat-cell *matCellDef="let element">
+                          {{ element.sms_cnt }}
+                        </mat-cell>
+                      </ng-container>
+
                     <!-- Action Column -->
                     <ng-container matColumnDef="action">
                       <mat-header-cell *matHeaderCellDef>Action </mat-header-cell>
