--- a/src/app/send-message/send-message.component.html
+++ b/src/app/send-message/send-message.component.html
@@ -65,15 +65,15 @@
 
                         <!-- Mobile number Column -->
                         <ng-container matColumnDef="sms">
-                            <mat-header-cell *matHeaderCellDef> SMS </mat-header-cell>
-                            <mat-cell *matCellDef="let element"> {{element.sms}} </mat-cell>
+                            <mat-header-cell *matHeaderCellDef style="justify-content: center;"> SMS </mat-header-cell>
+                            <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.sms}} </mat-cell>
                         </ng-container>
 
                         <!-- Role Column -->
-                        <ng-container matColumnDef="whatsapp">
+                        <!-- <ng-container matColumnDef="whatsapp">
                             <mat-header-cell *matHeaderCellDef> WhatsApp </mat-header-cell>
                             <mat-cell *matCellDef="let element"> {{element.whatsapp}} </mat-cell>
-                        </ng-container>
+                        </ng-container> -->
 
                         <ng-container matColumnDef="action">
                             <mat-header-cell *matHeaderCellDef  class="card-container">Actions </mat-header-cell>
@@ -86,19 +86,6 @@
                                 </a>
                             </mat-cell>
                         </ng-container>
-                        <!-- Action Column -->
-                        <!-- <ng-container matColumnDef="action">
-                            <th mat-header-cell *matHeaderCellDef >Actions </th>
-                            <td mat-cell *matCellDef="let row">{{row.action}}
-                                <a (click)="edit_low(row) " style="color:#1d8b4e; cursor:pointer;">
-                                    <mat-icon aria-label="Edit">edit</mat-icon>
-                                </a>
-                                <a (click)="delete_low(row)" style="color:red; cursor:pointer;">
-                                    <mat-icon aria-label="Delete">delete</mat-icon>
-                                </a>
-                                <mat-slide-toggle [checked]="row.status" class="toggle"  [color]="color" (change)="toggle(row,$event)"></mat-slide-toggle>
-                                </td>
-                        </ng-container> -->
 
                         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
