--- a/src/app/sent-report/sent-report.component.html
+++ b/src/app/sent-report/sent-report.component.html
@@ -309,6 +309,13 @@
                     {{ element.admin_send_date }}
                   </mat-cell>
                 </ng-container>
+
+                <ng-container matColumnDef="sms">
+                  <mat-header-cell *matHeaderCellDef> Sms Sent </mat-header-cell>
+                  <mat-cell *matCellDef="let element">
+                    {{ element.sms_cnt }}
+                  </mat-cell>
+                </ng-container>
   
                 <!-- Action Column -->
                 <ng-container matColumnDef="action">
@@ -321,10 +328,10 @@
                 </ng-container>
   
                 <mat-header-row
-                  *matHeaderRowDef="displayedColumns"
+                  *matHeaderRowDef="displayedColumns1"
                 ></mat-header-row>
                 <mat-row
-                  *matRowDef="let row; columns: displayedColumns;"
+                  *matRowDef="let row; columns: displayedColumns1;"
                 ></mat-row>
               </mat-table>
               <mat-paginator
