--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -59,8 +59,8 @@
     <nav>
         <ul>
             <li>
-                <a href="http://appbee.in/" target="_blank">
-                  @Copyright 2020 JantaKaFaisla . All rights reserved.
+                <a href="#" target="_blank">
+                  @Copyright 2020 Socratus Foundation for Collective Wisdom. All rights reserved.
                 </a>
             </li>
         </ul>
