--- a/src/app/upload-excel/upload-excel.component.html
+++ b/src/app/upload-excel/upload-excel.component.html
@@ -8,12 +8,7 @@
 <!-- <div class="row"> -->
 <div class="row container" style="margin: auto;justify-content: center;">
     <img src="../../assets/img/example-sheet.png" alt="sample image" class="img-fluid" style="border: 2px solid #1d8b4e; margin-bottom: 30px;">
-    <div id="template" style="text-align: center;">
-
-            <p>Download a Template File</p>
-        <a class="btn" href="../../assets/Example-Template.xlsx" download>Download Excel Template</a>
-           
-    </div>
+        <button class="btn" id="template" (click)="template()">Download Excel Template</button>
 </div><br>
 <!-- git -->
 <div class="pull-right" style="margin:30px 100px 0px 0px;text-align: right;">
