--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -25,8 +25,10 @@
             <ul class="navbar-nav">
              
                 <ul class="navbar-nav">
-                    <li class="nav-item det" (click)="userDetails()" style="font-size: 16px; font-size: 300;margin-right: 80px;">{{getWelComeMessage()}}
-                        
+                    <li class="nav-item det" (click)="userDetails()" style="margin-right: 6px;font-size: 18px;">
+                        <mat-icon inline="true">person</mat-icon>
+                    </li>
+                    <li class="nav-item det" (click)="userDetails()" style="font-size: 16px; font-size: 300;margin-right: 90px;">{{getWelComeMessage()}}
                     </li>
                 </ul>
             </ul>
