--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -33,8 +33,8 @@
     <nav>
       <ul>
         <li>
-          <a href="https://appbee.in/">
-            @Copyright 2020 JantaKaFaisla. All rights reserved.
+          <a href="#">
+            @Copyright 2020 Socratus Foundation for Collective Wisdom. All rights reserved.
           </a>
         </li>
       </ul>
