--- a/src/app/upload-excel/upload-excel.component.css
+++ b/src/app/upload-excel/upload-excel.component.css
@@ -1,11 +1,11 @@
-.container #template .btn{
+.container #template{
     border-radius: 2.5rem !important;
     padding: 10px 10px;
     border: 2px solid #1d8b4e;
     background-color: #1d8b4e;
 }
 
-.container #template .btn:hover{
+.container #template:hover{
     background-color: white;
     color: #1d8b4e;
 }
